// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET query 1`] = `
"export interface Test {
  /**
   * aa
   */
  a: string;
  /**
   * bb
   */
  b?: string;
  c: string;
  /**
   * dd
   */
  d?: string;
}
"
`;

exports[`POST form 1`] = `
"export interface Test {
  /**
   * aaa
   */
  a: string;
  /**
   * bbb
   */
  b?: string;
}
"
`;

exports[`POST form with file 1`] = `
"export interface Test {
  /**
   * aaa
   */
  a: string;
  /**
   * bbb
   */
  b?: string;
  /**
   * 文件
   */
  f: FileData;
}
"
`;

exports[`POST json 1`] = `
"export interface Test {
  a: string;
  b: number;
  c: boolean;
  d: {
    e: number;
  }[];
}
"
`;

exports[`POST json-schema 1`] = `
"export interface Test {
  /**
   * aa
   */
  a: string;
  /**
   * bb
   */
  b: number;
  /**
   * cc
   */
  c: number[];
  /**
   * dd
   */
  d: {
    d0: string;
    /**
     * d1d1
     */
    d1: boolean;
    d2: {
      /**
       * d2.0
       */
      'd2.0': string;
    };
  };
  /**
   * ee
   */
  e: boolean;
}
"
`;

exports[`POST others 1`] = `"export type Test = any"`;
